# eldenring-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-ASL2  LICENSE-MIT  README.md  rust-toolchain.toml  todo.txt
.github/workflows/: rust.yml
crates/debug/: Cargo.toml
crates/debug/src/: display.rs  lib.rs
crates/debug/src/display/: area_time.rs  camera.rs  chr.rs  chr_ins.rs  chr_man.rs  cs_fade.rs  cs_net_man.rs  cs_session_manager.rs  cs_world_geom_man.rs  dlio.rs  event_flag.rs  fade.rs  geometry.rs  msb.rs  net_man.rs  param.rs  regulation_manager.rs  resource.rs  session_manager.rs  sfx.rs  shared.rs  task.rs  world_area_time.rs  world_chr_man.rs
crates/dlrf/: Cargo.toml  README.md
crates/dlrf-derive/src/: lib.rs
crates/dlrf/derive/: Cargo.toml
crates/dlrf/derive/src/: lib.rs
crates/dlrf/src/: lib.rs
crates/eldenring/: Cargo.toml
crates/eldenring-util/: Cargo.toml  mapper-profile.toml
crates/eldenring-util/src/: arxan.rs  bullet_manager.rs  camera.rs  character_debug_flags.rs  character_type_properties.rs  ez_draw.rs  ez_state.rs  fade.rs  gaitem.rs  geometry.rs  havok.rs  singleton.rs  system.rs  task.rs  team_relation.rs  world_area_time.rs  world_chr_man.rs
crates/eldenring/src/: cs.rs  dlcr.rs  dlkr.rs  dlrf.rs  dltx.rs  fd4.rs  gxffx.rs  lib.rs  matrix.rs  position.rs  rotation.rs  stl.rs
crates/eldenring/src/cs/: bullet_ins.rs  bullet_manager.rs  camera.rs  character_type_properties.rs  chr_ins.rs  chr_slot.rs  event_flag.rs  event_man.rs  ez_select_bot.rs  fade.rs  fe_man.rs  field_area.rs  file.rs  gaitem.rs  havok_man.rs  item_lot.rs  job.rs  menu_man.rs  msb.rs  net_chr_sync.rs  net_man.rs  party_member_info.rs  player_game_data.rs  rend_man.rs  session_manager.rs  sfx.rs  sos_sign_man.rs  sp_effect.rs  targeting.rs  task.rs  team_relation.rs  window.rs  world_chr_man.rs  world_chr_man_dbg.rs  world_geom_man.rs  world_scene_draw_param_manager.rs  world_sfx_man.rs
crates/eldenring/src/dlio/: common.rs  file_device.rs  streams.rs
crates/eldenring/src/dlkr/: allocator.rs  mutex.rs
crates/eldenring/src/fd4/: basic_hash_string.rs  param_repository.rs  resource.rs  slot.rs  task.rs
crates/game/: Cargo.toml  README.md  mapper.toml
crates/game/src/: cs.rs  dl.rs  dlcr.rs  dlio.rs  dlkr.rs  dlrf.rs  dltx.rs  dlut.rs  fd4.rs  ffx.rs  gxffx.rs  lib.rs  matrix.rs  param.rs  pointer.rs  position.rs  rotation.rs  rva.rs  stl.rs  test.msb.dcx  test_skybox.msb.dcx  world_area_time.rs
crates/game/src/cs/: bullet_ins.rs  bullet_manager.rs  camera.rs  character_debug_flags.rs  character_type_properties.rs  chr_ins.rs  event_flag.rs  event_man.rs  ez_select_bot.rs  ez_state.rs  fade.rs  fe_man.rs  field_area.rs  field_ins.rs  file.rs  gaitem.rs  gui.rs  havok_man.rs  item.rs  item_id.rs  job.rs  location.rs  map_id.rs  menu_man.rs  msb.rs  msg_repository.rs  net_chr_sync.rs  net_man.rs  network_session.rs  party_member_info.rs  player_game_data.rs  regulation_manager.rs  rend_man.rs  session_manager.rs  sfx.rs  sos_sign_man.rs  sp_effect.rs  targeting.rs  task.rs  team_relation.rs  (+6 more)
crates/game/src/dl/: file_operator.rs  mutex.rs  runtime_class.rs  string.rs
crates/game/src/dlio/: common.rs  file_device.rs  streams.rs
crates/game/src/dlkr/: allocator.rs  mutex.rs  signal.rs
crates/game/src/fd4/: basic_hash_string.rs  file.rs  param_repository.rs  resource.rs  step.rs  task.rs  time.rs
crates/nightreign/: Cargo.toml
crates/nightreign/src/: param.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  matrix.rs  owned_pointer.rs
crates/util/: Cargo.toml  README.md  mapper-profile.toml
crates/util/src/: arxan.rs  bullet_manager.rs  camera.rs  character_debug_flags.rs  character_type_properties.rs  ez_draw.rs  ez_state.rs  fade.rs  gaitem.rs  geometry.rs  havok.rs  input.rs  lib.rs  pattern.rs  program.rs  resource.rs  rtti.rs  runtime.rs  rva.rs  singleton.rs  steam.rs  system.rs  task.rs  team_relation.rs  world_area_time.rs  world_chr_man.rs
examples/battleroyale/: Cargo.toml  README.md  build.rs  mapper.toml
examples/battleroyale/src/: chr_spawner.rs  config.rs  context.rs  gamemode.rs  gamestate.rs  hooks.rs  lib.rs  loadout.rs  location.rs  loot.rs  mapdata.rs  message.rs  network.rs  pain.rs  player.rs  rva.rs  spectator_camera.rs  stage.rs  team.rs  tool.rs  ui.rs
examples/builder-mode/: Cargo.toml  README.md
examples/builder-mode/src/: lib.rs
examples/enemy-control/: Cargo.toml  README.md
examples/enemy-control/src/: lib.rs
examples/mini-transmog/: Cargo.toml
examples/mini-transmog/src/: lib.rs
examples/procedural-dungeons/: Cargo.toml  README.md
examples/procedural-dungeons/src/: lib.rs
tools/binary-mapper/: Cargo.toml  README.md
tools/binary-mapper/src/: main.rs
tools/debug/: Cargo.toml  README.md  mapper-profile.toml
tools/debug/src/: display.rs  lib.rs
tools/debug/src/display/: area_time.rs  bullet_manager.rs  camera.rs  chr.rs  dlio.rs  event_flag.rs  event_man.rs  fade.rs  fe_man.rs  field_area.rs  gaitem.rs  geometry.rs  gparam.rs  net_man.rs  param.rs  session_manager.rs  sfx.rs  shared.rs  task.rs  world_chr_man.rs
tools/export-singletons/: Cargo.toml  README.md
tools/export-singletons/src/: lib.rs
tools/param-generator/: Cargo.toml  README.md
tools/param-generator/params/nightreign/: SwordArtsParam.xml
tools/param-generator/src/: main.rs
tools/profiler/: Cargo.toml  README.md
tools/profiler/src/: lib.rs
