[workspace]
members = [
    "crates/debug",
    "crates/game",
    "crates/util",
    "crates/dlrf",
    "examples/builder-mode",
    "examples/enemy-control",
    "examples/mini-transmog",
    "examples/procedural-dungeons",
    "examples/battleroyale",
    "tools/export-singletons",
    "tools/profiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vswarte/chains-bindings"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dlrf = { path = "crates/dlrf" }
game = { path = "crates/game" }
util = { path = "crates/util" }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
nalgebra-glm = "0.18"
nalgebra = "0.32"
tracing-panic = "0.1"
tracing-appender = "0.2.3"
zerocopy = "0.7"
zerocopy-derive = "0.7"
byteorder = "1"
pelite = "0.10"
dataview = "~1.0"
vtable-rs = "0.1"
rand = "0.8"
crash-handler = "0.6"

[workspace.dependencies.tracing-tracy]
version = "0.11.3"
features = ["enable"]

[workspace.dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
	"Win32_System_Kernel",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_LibraryLoader",
]

[patch.crates-io]
libudis86-sys = { git = 'https://github.com/vars1ty/libudis86-sys.git' }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
