[workspace]
resolver = "2"
members = [
    "crates/game",
    "crates/util",
    "crates/dlrf",
    "tools/debug",
    "tools/binary-mapper",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/vswarte/chains-bindings"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dlrf-derive = { path = "crates/dlrf/derive", version = "0.5.0", package = "eldenring-dlrf-derive" }
dlrf = { path = "crates/dlrf", version = "0.5.0", package = "eldenring-dlrf" }
game = { path = "crates/game", version = "0.5.0", package = "eldenring" }
util = { path = "crates/util", version = "0.5.0", package = "eldenring-util" }
binary_mapper = { path = "crates/binary-mapper" }
thiserror = "1"
tracing = "0.1"
nalgebra-glm = "0.18"
nalgebra = "0.32"
byteorder = "1"
pelite = "0.10"
vtable-rs = "0.1.4"

[workspace.dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
	"Win32_System_Kernel",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_LibraryLoader",
    "Win32_System_Memory",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
