[package]
name = "debug"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
util.workspace = true
game.workspace = true
dlrf.workspace = true
windows.workspace = true
pelite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]
