[package]
name = "eldenring-dlrf"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vswarte/eldenring-rs"
license = "MIT OR Apache-2.0"
readme = false
description = "Macro for generating singleton specifier for usage with the DLRF singleton finder"

[dependencies]
eldenring-dlrf-derive = "0.1.0"
