[package]
name = "eldenring-util"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Implement common helpers for Elden Ring modding"

[dependencies]
dlrf.workspace = true
eldenring.workspace = true
thiserror.workspace = true
tracing.workspace = true
pelite.workspace = true
vtable-rs.workspace = true
windows.workspace = true
undname = "2"
steamworks-sys = "0.10"
steamworks = "0.10"
