[package]
name = "eldenring"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Raw structures and bindings for From Software's title Elden Ring"

[lints.rust]
unused = "allow"

[dependencies]
dlrf.workspace = true
tracing.workspace = true
thiserror.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
pelite.workspace = true
vtable-rs.workspace = true
windows.workspace = true

[build-dependencies]
serde_derive = "1"
regex = "1"

[build-dependencies.serde]
version = "1"
features = ["derive"]
