[package]
name = "fromsoftware-shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme = false
description = "Helpers for dealing with pointers and other common stuff across games"

[dependencies]
nalgebra-glm.workspace = true
nalgebra.workspace = true
