[package]
name = "util"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
dlrf.workspace = true
game.workspace = true
tracing.workspace = true
windows.workspace = true
pelite.workspace = true
undname = "2"
steamworks-sys = "0.10"
steamworks = "0.10"
vtable-rs.workspace = true
