[package]
name = "mini-transmog"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
game.workspace = true
util.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true
steamworks = "0.10"
steamworks-sys = "0.10"
bincode = "1"

[lib]
crate-type = ["cdylib"]
