[package]
name = "procedural-dungeons"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
game.workspace = true
util.workspace = true
nalgebra-glm.workspace = true
nalgebra.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true
ron = "0.8"
bincode = "1"
rand = "0.8"

[dependencies.serde]
version = "1"
features = ["derive"]

[lib]
crate-type = ["cdylib"]
