[package]
readme = "README.md"
name = "binary-mapper"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pelite.workspace = true
clap = { version = "4.5.4", features = ["derive", "env"] }
toml = "0.8"
memmap = "0.7"
rayon = "1"

[dependencies.serde]
version = "1"
features = ["derive"]
