[package]
name = "debug"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
util = { version = "0.1.2", package = "eldenring-util" }
dlrf = { version = "0.1.0", package = "eldenring-dlrf" }
game = { version = "0.2.0", package = "eldenring" }
windows.workspace = true
pelite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true

[dependencies.hudhook]
git = "https://github.com/veeenu/hudhook"
features = [
    "imgui-tables-api"
]

[lib]
crate-type = ["cdylib"]
