[package]
name = "export-singletons"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
broadsword.workspace = true
util.workspace = true
tracing.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[lib]
crate-type = ["cdylib"]
