[package]
name = "param-generator"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = {version = "4", features = ["derive"]}
quick-xml = {version = "0.37", features = ["serialize"]}
serde = { version = "1.0", features = ["derive"]}
