[package]
name = "profiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
game.workspace = true
util.workspace = true
pelite.workspace = true
puffin = "0.19"
puffin_http = "0.16"
retour = { version = "0.3", features = ["static-detour"] }

[lib]
crate-type = ["cdylib"]
