[package]
name = "profiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eldenring.workspace = true
eldenring-util.workspace = true
pelite.workspace = true
retour = { version = "0.3", features = ["static-detour"] }

[dependencies.tracy-client]
version = "0.17.4"
features = ["enable", "system-tracing", "only-localhost", "sampling"]

[lib]
crate-type = ["cdylib"]
